update landing page

--- a/BerryProject/frontend/berry/index.html
+++ b/BerryProject/frontend/berry/index.html
@@ -2,12 +2,74 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Berry</title>
+    <link rel="stylesheet" href="./src/index.css">
   </head>
   <body>
     <div id="root"></div>
+    <header>
+      <nav>
+          <div class="logo">Berry</div>
+          <ul>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+          </ul>
+      </nav>
+    </header>
+
+    <section class="intro">
+        <div class="intro-content">
+            <h1 class="intro-heading">Welcome to Berry</h1>
+            <p class="intro-p">Your go-to platform for connecting entrepreneurs with mentors.</p>
+            <a href="https://example.com/deployed-app" class="cta-button">Get Started</a>
+        </div>
+    </section>
+
+    <section id="features" class="features">
+        <h2>Key Features</h2>
+        <div class="feature">
+            <img class="feature-icon" src="./src/assets/istockphoto-mentorship.jpg" alt="Feature 1">
+            <h3>Entrepreneur Network</h3>
+            <p>Connect with a community of like-minded entrepreneurs.</p>
+        </div>
+        <div class="feature">
+            <img class="feature-icon second" src="./src/assets/ai-generated- connectivity.webp" alt="Feature 2">
+            <h3>Mentorship</h3>
+            <p>Find mentors to guide you on your entrepreneurial journey.</p>
+        </div>
+        <div class="feature">
+            <img class="feature-icon last" src="./src/assets/istockphoto-1222519720-612x612.jpg" alt="Feature 3">
+            <h3>Resource Hub</h3>
+            <p>Access a wealth of resources to help grow your business.</p>
+        </div>
+    </section>
+
+    <section id="about" class="about">
+        <h2>About Us</h2>
+        <p>Berry was inspired by the need to connect entrepreneurs with the resources and guidance they need to succeed. This project serves as a portfolio piece for my development journey.</p>
+        <p>Learn more about our team:</p>
+        <ul>
+            <li><a href="https://linkedin.com/in/your-profile">Your Name Here</a></li>
+            <li><a href="https://linkedin.com/in/team-member-1">Team Member 1</a></li>
+            <li><a href="https://linkedin.com/in/team-member-2">Team Member 2</a></li>
+        </ul>
+        <p>Check out our <a href="https://github.com/your-repo">GitHub repository</a> for more details.</p>
+    </section>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 Berry. All Rights Reserved.</p>
+            <ul>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#faqs">FAQs</a></li>
+                <li><a href="#privacy">Privacy Policy</a></li>
+            </ul>
+        </div>
+    </footer>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
