Update index.html and styles.css for Berry project

--- a/BerryProject/frontend/berry/index.html
+++ b/BerryProject/frontend/berry/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Berry</title>
     <link rel="stylesheet" href="./src/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
     <div id="root"></div>
@@ -23,7 +24,7 @@
         <div class="intro-content">
             <h1 class="intro-heading">Welcome to Berry</h1>
             <p class="intro-p">Your go-to platform for connecting entrepreneurs with mentors.</p>
-            <a href="https://example.com/deployed-app" class="cta-button">Get Started</a>
+            <a href="http://127.0.0.1:5500/BerryProject/frontend/berry/index.html" class="cta-button">Get Started</a>
         </div>
     </section>
 
@@ -51,11 +52,9 @@
         <p>Berry was inspired by the need to connect entrepreneurs with the resources and guidance they need to succeed. This project serves as a portfolio piece for my development journey.</p>
         <p>Learn more about our team:</p>
         <ul>
-            <li><a href="https://linkedin.com/in/your-profile">Your Name Here</a></li>
-            <li><a href="https://linkedin.com/in/team-member-1">Team Member 1</a></li>
-            <li><a href="https://linkedin.com/in/team-member-2">Team Member 2</a></li>
+            <li><a href="https://www.linkedin.com/in/george-erica/">george-erica</a></li>
         </ul>
-        <p>Check out our <a href="https://github.com/your-repo">GitHub repository</a> for more details.</p>
+        <p>Check out our <a href="https://github.com/Berica98/Alx-Portfolio-project-Berry">GitHub repository</a> for more details.</p>
     </section>
 
     <footer>
@@ -68,8 +67,15 @@
                 <li><a href="#faqs">FAQs</a></li>
                 <li><a href="#privacy">Privacy Policy</a></li>
             </ul>
+            <div class="social-media">
+                <a href="https://web.facebook.com/@george.erica" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.twitter.com/ericasavvy" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://www.linkedin.com/in/george-erica/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/ericasavvy" target="_blank"><i class="fab fa-instagram-square"></i></a>
+            </div>
         </div>
     </footer>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
